fix: Optimize user creation and deletion
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>